# SpeakerDesigner

./: CMakeLists.txt  README.md
cmake/: FindQwt.cmake
src/: amplifier.h  bodeplot.cpp  bodeplot.h  driver.h  mainwindow.cpp  response.cpp  response.h  tracker.cpp  tracker.h  tree.h  treewidget.cpp  treewidget.h
src/ui/: mainwindow.ui
